looseProducts are sent with mealsInDay response
