# docs/swagger.json
@@ -1392,6 +1392,12 @@
                 "id": {
                     "type": "integer"
                 },
+                "looseProducts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/meal.LooseProductInDay"
+                    }
+                },
                 "lunch": {
                     "$ref": "#/definitions/meal.Meal"
                 },
